Implement delete and Patch methods.
